# trollfabriken-chart-fx-bootstrap

./: .gitignore
.github/workflows/: release.yml
chart-fx/: pyproject.toml
chart-fx/src/chart_fx/: __init__.py  api.py  base.py
chart-fx/src/chart_fx/charts/: __init__.py  bar_charts.py  circle_charts.py  line_charts.py  scatter_charts.py
chart-fx/src/chart_fx/matrices/: __init__.py  correlation_matrix.py  dot_matrix.py  heatmap_charts.py  quadrant_matrix.py
chart-fx/src/chart_fx/specialized/: __init__.py  compass_chart.py  financial_charts.py  radar_chart.py  statistical_charts.py  treemap_chart.py  waterfall_chart.py  wind_rose.py
